Fixed overlapping issues

--- a/src/CSS/Deck.css
+++ b/src/CSS/Deck.css
@@ -1,9 +1,23 @@
 .task-card-add-button{
-    padding: 16px;
-    width: 310px;
-    height: 410px;
+    width: 280px;
+    /* Match task card width */
+    height: 380px;
+    /* Match task card height */
     margin: 8px;
-    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #ddd;
+    border-radius: 16px;
+    background: #333;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+        
+}
+
+.task-card-add-button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .deck {
